# bebop_control

./: CMakeLists.txt  README.md  package.xml
data/: bebop2_camera_calib.yaml  bebop2_camera_calib.yaml~  bebop2_low_camera_calib.yaml  bebop2_low_camera_calib.yaml~  ost.txt  ost.yaml  ost.yaml~
include/: bebop_command.h  bebop_control_gui.h  round_thread.h
launch/: bebop_control.launch
src/: bebop_command.cpp  bebop_control_gui.cpp  main.cpp  round_thread.cpp
ui/: bebop_control_gui.ui
